--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
     <title>Google search</title>
 </head>
 <body>
+    <img src="#" alt="Google" class="Google_lofo">
     <form action="https://www.google.com/search" class="action" method="get" role="search">
         <input type="text" name="q btnI=I%27m+Feeling+Lucky" placeholder="search something">
         <input type="submit" value="Google Search">
