--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Project 0/style.css">
     <title>Google search</title>
+    <style>
+.action{
+    margin-bottom: 20px;
+}
+    </style>
 </head>
 <body>
     <img src="#" alt="Google" class="Google_lof">
