adding top marign for the form

--- a/hello.html
+++ b/hello.html
@@ -8,8 +8,8 @@
     <title>Google search</title>
 </head>
 <body>
-    <img src="#" alt="Google" class="Google_lof">
-    <form action="https://www.google.com/search" class="action" method="get" role="search">
+    <img src="#" alt="Google" class="Google_lof" >
+    <form action="https://www.google.com/search" class="action" method="get" role="search" style="margin-top: 30px;">
         <input type="text" name="q btnI=I%27m+Feeling+Lucky" placeholder="search something">
         <input type="submit" value="Google Search">
         <input type="submit" value="I'm Feeling Lucky">
